--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -27,7 +27,7 @@
     }
 
     .subtitle-section {
-        @apply text-[18px] font-medium lg:text-[24px]
+        @apply text-[18px] font-medium md:text-[20px] lg:text-[22px]
     }
 
     .btn {
@@ -106,7 +106,7 @@
     }
 
     .span-menu {
-        @apply text-[20px] px-4 font-light pb-[15px]
+        @apply text-[20px] px-4 font-light pb-[15px] uppercase;
     }
 
     .dropMenu-list {
